# VkRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompileProperties.cmake  FetchArchive.cmake  FetchContentArchive.cmake  ImGuiVulkan.cmake  TargetShaders.cmake
shaders/: colored_triangle.frag.spv  colored_triangle.vert  colored_triangle.vert.spv  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  gradient.comp.spv  gradient_color.comp  gradient_color.comp.spv  tex_image.frag  tex_image.frag.spv
src/: CMakeLists.txt  Common.h  Descriptors.cpp  Descriptors.h  Engine.cpp  Engine.h  Loader.cpp  Loader.h  Pipelines.cpp  Pipelines.h  main.cpp  test.cpp  test.h
